--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -77,5 +77,16 @@
       <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
       <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
       <script src="http://getbootstrap.com/docs-assets/js/holder.js"></script>
+
+      <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-40005460-1', 'casesimple.com');
+        ga('send', 'pageview');
+
+      </script>
   </body>
 </html>
