--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,7 @@
               <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                   <li><a href="/">Home</a></li>
-                  <li class="dropdown">
+                  <!--<li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Products <b class="caret"></b></a>
                     <ul class="dropdown-menu">
                       <li><a href="#">Action</a></li>
@@ -54,6 +54,7 @@
                   </li>
                   <li><a href="http://blog.casesimple.com">Blog</a></li>
                   <li><a href="#contact">Contact</a></li>
+                --> 
                 </ul>
               </div>
             </div>
