--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,21 +40,19 @@
               <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                   <li><a href="/">Home</a></li>
-                  <!--<li class="dropdown">
+                  <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Products <b class="caret"></b></a>
                     <ul class="dropdown-menu">
-                      <li><a href="#">Action</a></li>
-                      <li><a href="#">Another action</a></li>
-                      <li><a href="#">Something else here</a></li>
+                      <li><a href="#mini-jambox-case" title="MINI Jambox Case">MINI Jambox Case</a></li>
+                      <li><a href="#big-jambo-case" title="BIG Jambox Case">BIG Jambox Case</li>
+                      <li><a href="#jambox-case" title="Jambox Case">Jambox Case</a></li>
                       <li class="divider"></li>
-                      <li class="dropdown-header">Nav header</li>
-                      <li><a href="#">Separated link</a></li>
-                      <li><a href="#">One more separated link</a></li>
+                      <li><a href="#ulock-holster" title="U-Lock Holster">U-Lock Holsger</a></li>
+                      <li><a href="#logitech-ue-case">Logitech UE Case</a></li>
                     </ul>
                   </li>
                   <li><a href="http://blog.casesimple.com">Blog</a></li>
                   <li><a href="#contact">Contact</a></li>
-                --> 
                 </ul>
               </div>
             </div>
