--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,7 +52,7 @@
                     </ul>
                   </li>
                   <li><a href="http://blog.casesimple.com">Blog</a></li>
-                  <li><a href="#contact">Contact</a></li>
+                  <li><a id="contact" href="#" data-toggle="modal" data-target="#contact-modal">Contact</a></li>
                 </ul>
               </div>
             </div>
@@ -87,5 +87,38 @@
         ga('send', 'pageview');
 
       </script>
+
+      <div id="contact-modal" class="modal fade" style="color: #fff;">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+              <h4 class="modal-title">Contact CaseSimple</h4>
+            </div>
+            <div class="modal-body">
+              <div id="wufoo-zpz9ek71jcei8r">
+                <!-- WUFOO FORM -->
+              </div>
+            </div>
+          </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+      </div><!-- /.modal -->
+
+      <script type="text/javascript">var zpz9ek71jcei8r;(function(d, t) {
+        var s = d.createElement(t), options = {
+        'userName':'casesimple', 
+        'formHash':'zpz9ek71jcei8r', 
+        'autoResize':false,
+        'height':'400',
+        'async':true,
+        'host':'wufoo.com',
+        'header':'hide', 
+        'ssl':true};
+        s.src = ('https:' == d.location.protocol ? 'https://' : 'http://') + 'wufoo.com/scripts/embed/form.js';
+        s.onload = s.onreadystatechange = function() {
+        var rs = this.readyState; if (rs) if (rs != 'complete') if (rs != 'loaded') return;
+        try { zpz9ek71jcei8r = new WufooForm();zpz9ek71jcei8r.initialize(options);zpz9ek71jcei8r.display(); } catch (e) {}};
+        var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr);
+        })(document, 'script');</script>
   </body>
 </html>
