social icons in header

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,8 @@
         <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
         <!-- Bootswatch -->
         <link href="//netdna.bootstrapcdn.com/bootswatch/3.0.3/cyborg/bootstrap.min.css" rel="stylesheet">
+        <!-- FontAwesome -->
+        <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
 
         <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!--[if lt IE 9]>
@@ -21,6 +23,7 @@
 
         <!-- Custom styles for this template -->
         <link href="css/carousel.css" rel="stylesheet">
+        <link href="css/site.css" rel="stylesheet">
     </head>
     <body>
       <div class="navbar-wrapper">
@@ -35,7 +38,7 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">{{ site.name }}</a>
+                <a class="navbar-brand" href="#">CaseSimple</a>
               </div>
               <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -53,6 +56,13 @@
                   </li>
                   <li><a href="http://blog.casesimple.com">Blog</a></li>
                   <li><a id="contact" href="#" data-toggle="modal" data-target="#contact-modal">Contact</a></li>
+                </ul>
+                <ul id="social" class="nav navbar-nav navbar-right">
+                  <li><a href="http://twitter.com/casesmpl" target="_blank"><i class="fa fa-lg fa-twitter-square"></i></a></li>
+                  <li><a href="http://instagram.com/casesimple" target="_blank"><i class="fa fa-lg fa-instagram"></i></a></li>
+                  <li><a href="https://www.facebook.com/casesmpl" target="_blank"><i class="fa fa-lg fa-facebook-square"></i></a></li>
+                  <li><a href="http://plus.google.com/+CaseSimple" target="_blank"><i class="fa fa-lg fa-google-plus-square"></i></a></li>
+                  <li><a href="http://jamboxcase.tumblr.com" target="_blank"><i class="fa fa-lg fa-tumblr-square"></i></a></li>
                 </ul>
               </div>
             </div>
