--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>{{ page.title }}</title>
         <meta name="viewport" content="width=device-width">
-        <meta name="description" content="CaseSimple makes cases for the Jamboxes, bluetooth speakers, and other bike mounts.">
+        <meta name="description" content="CaseSmpl makes cases for the Jamboxes, bluetooth speakers, and other bike mounts.">
+        <meta name="tags" content="casesmpl, casesimple, jambox case, big jambox case, mini jambox case">
         <meta name="author" content="Andy Brudtkuhl">
 
         <!-- Bootstrap core CSS -->
@@ -14,7 +15,7 @@
         <link href="//netdna.bootstrapcdn.com/bootswatch/3.0.3/cyborg/bootstrap.min.css" rel="stylesheet">
         <!-- FontAwesome -->
         <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
-
+        <link href="/css/bootstrap.icon-large.min.css" rel="stylesheet">
         <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!--[if lt IE 9]>
           <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -22,8 +23,8 @@
         <![endif]-->
 
         <!-- Custom styles for this template -->
-        <link href="css/carousel.css" rel="stylesheet">
-        <link href="css/site.css" rel="stylesheet">
+        <link href="/css/carousel.css" rel="stylesheet">
+        <link href="/css/site.css" rel="stylesheet">
     </head>
     <body>
       <div class="navbar-wrapper">
@@ -38,7 +39,7 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">CaseSimple</a>
+                <a class="navbar-brand" href="#">CaseSmpl</a>
               </div>
               <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -76,7 +77,9 @@
 
       <!-- FOOTER -->
       <div class="container">
+
         <footer>
+          <hr class="featurette-divider" />
           <p class="pull-right"><a href="#">Back to top</a></p>
           <p>&copy; 2014 CaseSimple, LLC. &middot; <a href="https://twitter.com/casesmpl" target="_blank">Twitter</a> &middot; <a href="https://www.facebook.com/casesmpl" target="_blank">Facebook</a> &middot; <a href="http://instagram.com/casesimple" target="_blank">Instagram</a> &middot; <a href="https://plus.google.com/+Casesimple/" target="_blank">Google+</a></p>
         </footer>
